--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -1,6 +1,7 @@
 <!-- Sidebar -->
 <div class="sidebar-fixed position-fixed activeMenu">
-	<perfect-scrollbar class="perfect-scroll">	<div class="list-group list-group-flush">	
+	<perfect-scrollbar class="perfect-scroll">
+	<div class="list-group list-group-flush">	
 		<!-- <div [routerLink]="['/summary']" (click)="preview('Summary')" skipLocationChange routerLinkActive="active" mat-button class="mat-button">
 			<span class="inlineIconBox">
 				<img src="assets/icons/sidemenu/summery.svg" class="dashboard">			
@@ -48,7 +49,7 @@
 			<span class="linkTitle">Preview</span>
 		</button> -->
 
-	<div class="sub-title marginTop15">Index Configurations</div>
+	 <div class="sub-title marginTop15">Index Configurations</div>
 			<div mat-button class="mat-button" [routerLink]="['/traits']" skipLocationChange routerLinkActive="active" (click)="preview('traits')" mat-button>
 				<span class="inlineIconBox leftAdjust">
 					<img src="assets/icons/sidemenu/new-icons/traits.svg" class="defaultIcon">	
@@ -69,64 +70,64 @@
 				<img src="assets/icons/sidemenu/new-icons/attributes-active.svg" class="activeIcon">				
 			</span>
 			<span class="linkTitle">Fields</span>
-		</div>
-	<div class="sub-title marginTop15">Search Configurations</div>
-	<div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
-		<span class="inlineIconBox">	
-			<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
-			<img src="assets/icons/sidemenu/new-icons/query-active.svg" class="activeIcon">			
-		</span>
-		<span class="linkTitle">Query Pipeline</span>
-	</div>
-	<div mat-button class="mat-button" [routerLink]="['/ml-threshold']" skipLocationChange routerLinkActive="active" (click)="preview('ml')" mat-button>
-		<span class="inlineIconBox leftAdjust">	
-			<img src="assets/icons/sidemenu/new-icons/ml.svg" class="defaultIcon">	
-			<img src="assets/icons/sidemenu/new-icons/ml-active.svg" class="activeIcon">			
-		</span>
-		<span class="linkTitle">NLP & Machine Learning</span>
-	</div>
-		<div mat-button class="mat-button" [routerLink]="['/synonyms']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>			
-			<span class="inlineIconBox">
-				<img src="assets/icons/sidemenu/new-icons/synonyms.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/synonyms-active.svg" class="activeIcon">					
-			</span>
-			<span class="linkTitle">Synonyms</span>
-		</div>
-		<div mat-button class="mat-button" [routerLink]="['/stopWords']" skipLocationChange routerLinkActive="active" (click)="preview('stopWords')" mat-button>
-			<span class="inlineIconBox leftAdjust">
-				<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">Stop Words</span>
-		</div>
-		<div mat-button class="mat-button" [routerLink]="['/weights']" skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
-			<span class="inlineIconBox leftAdjust">
-				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">Weights</span>
-		</div>
-		<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
-			<span class="inlineIconBox">
-					<img src="assets/icons/sidemenu/new-icons/rules.svg" class="defaultIcon">	
-					<img src="assets/icons/sidemenu/new-icons/rules-active.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">Rules & Personalization</span>
-		</div>
-		<div mat-button class="mat-button">
-			<span class="inlineIconBox">
-				<img src="assets/icons/sidemenu/new-icons/demo.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/demo-active.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">Demo</span>
-		</div>
-		<div mat-button class="mat-button">
-			<span class="inlineIconBox">
-				<img src="assets/icons/sidemenu/new-icons/general-settings.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/general-settings-active.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">General Settings</span>
-		</div>
+		    </div>
+		<div class="sub-title marginTop15">Search Configurations</div>
+			<div mat-button class="mat-button" [routerLink]="['/weights']" skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
+				<span class="inlineIconBox leftAdjust">
+					<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/weights.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">Weights</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/synonyms']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>			
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/synonyms.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/synonyms-active.svg" class="activeIcon">					
+				</span>
+				<span class="linkTitle">Synonyms</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/stopWords']" skipLocationChange routerLinkActive="active" (click)="preview('stopWords')" mat-button>
+				<span class="inlineIconBox leftAdjust">
+					<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">Stop Words</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
+				<span class="inlineIconBox">	
+					<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/query-active.svg" class="activeIcon">			
+				</span>
+				<span class="linkTitle">Query Pipeline</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/ml-threshold']" skipLocationChange routerLinkActive="active" (click)="preview('ml')" mat-button>
+				<span class="inlineIconBox leftAdjust">	
+					<img src="assets/icons/sidemenu/new-icons/ml.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/ml-active.svg" class="activeIcon">			
+				</span>
+				<span class="linkTitle">NLP & Machine Learning</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
+				<span class="inlineIconBox">
+						<img src="assets/icons/sidemenu/new-icons/rules.svg" class="defaultIcon">	
+						<img src="assets/icons/sidemenu/new-icons/rules-active.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">Rules & Personalization</span>
+			</div>
+			<div mat-button class="mat-button">
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/demo.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/demo-active.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">Demo</span>
+			</div>
+			<div mat-button class="mat-button">
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/general-settings.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/general-settings-active.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">General Settings</span>
+			</div>
 
 		<!-- <div mat-button class="mat-button settings-menu">
 			<span class="inlineIconBox">
@@ -134,7 +135,8 @@
 			</span>
 			<span class="linkTitle">Settings</span>
 		</div> -->
-	</div></perfect-scrollbar>
+	</div>
+</perfect-scrollbar>
 
 </div>
 <!-- Sidebar -->
