--- a/findly-builder/src/app/components/stop-words/stop-words.component.scss
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.scss
@@ -16,6 +16,10 @@
                 margin: 0;    
                 .text{
                     margin: 0 !important;
+                    .heading{
+                        font-size: 18px;
+                        font-weight: 500;
+                    }
                 }         
              }                                  
          }         
