--- a/findly-builder/src/app/components/add-result/add-result.component.html
+++ b/findly-builder/src/app/components/add-result/add-result.component.html
@@ -30,7 +30,7 @@
         <input type="text" class= "search-box" placeholder="Search by title,description or url">
     </div>
   
-    <div class="record">
+    <!-- <div class="record">
         <div class="inline-rec rec-60">
             <div class="ques"> Are credit deposit account insured  by the federal Deposit Insuarance Corporation ?</div>
             <div class="ans">Are credit deposit account insured  by the federal Deposit Insuarance Corporation, Are credit deposit account insured  by the federal Deposit Insuarance Corporation</div>
@@ -41,7 +41,7 @@
            <span class="count">764 CLICKS </span> 
         </div>
 
-    </div>
+    </div> -->
     <div class="footer">
         <button class="add">Add</button>
         <button class="cancel">Cancel</button>
