--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<div [hidden]="true">
+<!-- <div [hidden]="true"> -->
     <app-insights [data] = "'insights'"></app-insights>
     <app-add-result></app-add-result>
-</div> 
+<!-- </div>  -->
