--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -46,7 +46,7 @@
     <!-- DATA TABLE ENDS HERE -->
 </div>
 
-<kr-modal modalType="default" modalClass="addWeightModalComponent"  #addDditWeightPop>
+<kr-modal modalType="center" modalClass="addWeightModalComponent modal_popups_"  #addDditWeightPop>
     <div class="modal-header textAlignLeft">
         <h4 class="modal-title">Add Weight</h4>
     </div>
