--- a/findly-builder/src/app/components/stop-words/stop-words.component.scss
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.scss
@@ -109,10 +109,42 @@
      }
       
 }
+.empty-stopwords{
+    width: 320px;
+    margin: 0 auto;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;                       
+    -webkit-box-pack: center;                       
+    -ms-flex-pack: center;                       
+    justify-content: center;   
+    height: calc(100vh - 290px);
+    &.divBlockEmptylastChild{
+        display: none;
+        padding: 0;
+    }
+    img{
+        width: 75%;
+        margin: 0 auto;
+    }     
+    .heading{
+        margin: 18px 0 8px 0;
+        color: $primaryColor;
+    }
+    .desc{
+        color: $secondaryColor;
+        font-size: 14px;
+    }
+}
 .table-scroll-perfect-synonyms{
     margin: 20px 0 0 0;
     height: calc(100vh - 276px);
-    .empty-questions-selected{
+    .empty-stopwords{
         width: 320px;
         margin: 0 auto;
         text-align: center;
