--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -13,16 +13,17 @@
             <img *ngIf="searchSources" (click)="applyFilter('')" class="search-icon" src="assets/images/close.svg">
             <img *ngIf="!searchSources" class="search-icon"src="assets/images/search_gray.svg">
           </div> 
+          <div class="left-btns">
+            <button id="addNewSynonymBtn" (click)='enableAddNewSynonymBtn()' class="kr-sg-button-primary btn_lg mr-0"><img src="assets/icons/plus-white.svg" class="mr-2" >Add Synonym</button>
+          </div>
         </div>                       
-    </div>   
-    <div class="left-btns float-right">
-      <button id="addNewSynonymBtn" (click)='enableAddNewSynonymBtn()' class="kr-sg-button-primary btn_lg mr-0"><img src="assets/icons/plus-white.svg" class="mr-2" >Add Synonym</button>
-    </div>
+      </div>        
   </div>
   <!-- search Bar -->
   <!-- synonyms Card Header -->
   <div class="add-synonyms-inputs" *ngIf="!loadingContent && newSynonymObj.addNew">
     <div class="input-group-items">
+      <div class="heading-title">Add Synonym</div>
       <div class="synonymTypeBlock">
         <div class="group-radiobutton">
           <div class="kr-sg-radiobutton">
@@ -35,48 +36,60 @@
           </div>
        </div> 
       </div>
-      <div class="keyword row p-3" *ngIf="newSynonymObj.type==='oneWaySynonym'">
+      <div class="keyword row m-0" *ngIf="newSynonymObj.type==='oneWaySynonym'">
         <div class="kr-sg-input-text">
-          <input type="text" id="synonymName" name="synonymName" autocomplete="off" [(ngModel)]="synonymObj.keyword" [ngModelOptions]="{standalone: true}" placeholder="Keyword" required class="input-text">
+          <input type="text" id="synonymName" name="synonymName" autocomplete="off" [(ngModel)]="synonymObj.keyword" [ngModelOptions]="{standalone: true}" placeholder="Search Query" required class="input-text">
         </div>
       </div>
-      <div class="tags row p-3">
+      <div class="tags row m-0">
         <div class="chip-sys-data">                      
             <mat-form-field  class="example-chip-list" [floatLabel]="'never'">
                 <mat-chip-list #chipList>
                   <mat-chip *ngFor="let syn of synArr" [selectable]="selectable" [removable]="removable" (removed)="remove(syn)"><span *ngIf="syn">{{syn}}</span>
                     <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
                   </mat-chip>
-                  <input placeholder="Synonyms" [value]="typedQuery" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)" #suggestedInput [(ngModel)]="synonymObj.synonyms" [ngModelOptions]="{standalone: true}" autocomplete="off">
+                  <input placeholder="Type Synonyms and Press Enter" [value]="typedQuery" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)" #suggestedInput [(ngModel)]="synonymObj.synonyms" [ngModelOptions]="{standalone: true}" autocomplete="off">
                 </mat-chip-list>
             </mat-form-field>
         </div>
      </div>
-     <div class="saveCacleSynBlock row pt-3">
+     <div class="saveCacleSynBlock row m-0">
        <div class="float-right">
-        <button class="kr-sg-button-primary mr-2 ml-3" (click)="addSynonyms(synonymObj)">Save</button>
-        <button class="kr-sg-button-secondary" (click)="cancleAddSynonyms()">Cancle</button>
+        <button class="kr-sg-button-primary btn_lg" (click)="addSynonyms(synonymObj)">Save</button>
+        <button class="kr-sg-button-secondary btn_lg" (click)="cancleAddSynonyms()">Cancle</button>
        </div>
     </div>
     </div>
- </div>
+  </div>
   <perfect-scrollbar class="table-scroll-perfect-synonyms" [ngClass]="{newRecoredActive: newSynonymObj.addNew}">
-    <div class="empty-questions-selected"  *ngIf="!(synonymData && synonymData.length) && !loadingContent">
+    <div class="empty-questions-selected"  *ngIf="!(synonymData && synonymData.length) && !newSynonymObj.addNew && !loadingContent">
       <img src="assets/images/icons/empty_ill.svg">
       <div class="heading">No Synonyms Available</div>
-      <div class="desc">Please add Synonyms</div>
+      <div class="desc">Please add Synonyms</div>      
     </div>
       <!-- DATA TABLE START HERE -->
-      <div class="kr-sg-data-table">
+      <div class="kr-sg-data-table" *ngIf="(synonymData && synonymData.length) && !loadingContent">
         <section class="table-content">
-            <header class="table-header  pt-2 pb-2" >
-                <div class="col_ col-8">TERMS</div>
-                <div class="col_ col-4">TYPE</div>
+            <header class="table-header" >
+                <div class="col-8 title-header"><img src="assets/icons/sort_up_down.svg">TERMS</div>
+                <div class="col-4 title-header"><img src="assets/icons/sort_up_down.svg">TYPE
+                  <span class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom-center'">                                        
+                    <div class="dropdown dropdown-open">
+                      <img src="assets/icons/synonyms_sort_dropdown.svg" ngbDropdownToggle>                                            
+                      <ul class="dropdown-menu content-menu synonyms_sort_dropdown" ngbDropdownMenu>
+                       <li>One-way Synonym</li>
+                       <li>Synonym</li>		
+                      </ul>
+                    </div>
+                  </span>
+
+                </div>
             </header>
             <div class="content-body" *ngFor="let synonym of synonymData;let i = index">
               <div *ngIf="currentEditIndex === i" class="w-100">
-                <div class="add-synonyms-inputs">
+                <div class="add-synonyms-inputs ml-0 mr-0 mb-2">
                   <div class="input-group-items">
+                    <div class="heading-title">Add Synonym</div>
                     <div class="synonymTypeBlock">
                       <div class="group-radiobutton">
                         <div class="kr-sg-radiobutton">
@@ -89,19 +102,19 @@
                         </div>
                      </div> 
                     </div>
-                    <div class="keyword row p-3" *ngIf="synonym.type==='oneWaySynonym'">
+                    <div class="keyword row m-0" *ngIf="synonym.type==='oneWaySynonym'">
                       <div class="kr-sg-input-text">
-                        <input type="text" id="synonymName" name="synonymName" autocomplete="off" [(ngModel)]="synonym.keyword" [ngModelOptions]="{standalone: true}" placeholder="Keyword" required class="input-text">
+                        <input type="text" id="synonymName" name="synonymName" autocomplete="off" [(ngModel)]="synonym.keyword" [ngModelOptions]="{standalone: true}" placeholder="Search Query" required class="input-text">
                       </div>
                     </div>
-                    <div class="tags row p-3">
+                    <div class="tags row m-0">
                       <div class="chip-sys-data">                      
                         <mat-form-field  class="example-chip-list" [floatLabel]="'never'">
                           <mat-chip-list #chipList [attr.aria-label]="'tag selection'">
                             <mat-chip *ngFor="let syn of synonym.synonyms"  [selectable]="selectable" [removable]="removable" (removed)="removeList(syn,synonym._id,i)"><span class="mat-val" *ngIf="syn">{{syn}}</span>
                               <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
                             </mat-chip>                                  
-                            <input placeholder="Synonyms"
+                            <input placeholder="Type Alternatives and Press Enter"
                                   [matChipInputFor]="chipList"
                                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                                   [matChipInputAddOnBlur]="addOnBlur"
@@ -110,29 +123,31 @@
                         </mat-form-field>
                       </div>
                    </div>
-                   <div class="saveCacleSynBlock row pt-3">
+                   <div class="saveCacleSynBlock row m-0">
                     <div class="float-right">
-                      <button class="kr-sg-button-primary  mr-2 ml-3" (click)="updateSynonm(synonym._id,i)">Save</button>
-                    <button class="kr-sg-button-secondary" (click)="currentEditIndex = null ">Cancle</button>
+                      <button class="kr-sg-button-primary btn_lg" (click)="updateSynonm(synonym._id,i)">Save</button>
+                    <button class="kr-sg-button-secondary btn_lg" (click)="currentEditIndex = null ">Cancle</button>
                     </div>
                  </div>
                   </div>
                </div>
               </div>
-            <ng-container *ngIf="currentEditIndex !== i">
-              <div class="col_ col-8">
-                <span class="mr-2" *ngIf="synonym.keyword"><span class="synonym mr-2 font-weight-bold">{{synonym.keyword}}</span><span><img src="assets/icons/oneWayArrow.svg"></span></span>
-                <span>
-                  <span class="mr-2" *ngFor="let eachSyn of synonym.synonyms;let i = index"><span class="synonymBubble mr-2">{{eachSyn}}</span>
-                    <img class="mr-2" *ngIf="synonym.keyword && (i < synonym.synonyms.length-1)" src="assets/icons/OR.svg">
-                    <img class="mr-2" *ngIf="!synonym.keyword" src="assets/icons/twoWayArrow.svg">
-                  </span>
+              <ng-container *ngIf="currentEditIndex !== i">
+              <div class="col-8 data_content">
+                <span class="one_way_sys" *ngIf="synonym.keyword">
+                  <span class="synonym font-weight-bold">{{synonym.keyword}}</span>
+                  <img src="assets/icons/oneWayArrow.svg">
+                </span>
+                <span class="bubble_syn" *ngFor="let eachSyn of synonym.synonyms;let i = index">
+                  <span class="synonymBubble">{{eachSyn}}</span>
+                  <img class="or_divider" *ngIf="synonym.keyword && (i < synonym.synonyms.length-1)" src="assets/icons/OR.svg">
+                  <img class="arrow_divider" *ngIf="!synonym.keyword" src="assets/icons/twoWayArrow.svg">
                 </span>
               </div>
-              <div class="col_ col-4">
-                <span *ngIf="synonym.keyword">One-way Synonym</span>
-                <span *ngIf="!synonym.keyword">Synonym</span>
-                <span class="float-right">
+              <div class="col-4 data_content">
+                <span *ngIf="synonym.keyword" class="title_data">One-way Synonym</span>
+                <span *ngIf="!synonym.keyword" class="title_data">Synonym</span>
+                <span class="float-right action-links">
                   <span class="actions-links mr-3" (click) = "editSynRecord(synonym,$event,i);currentEditIndex = i" ngbTooltip='edit' [container]='"body"'><img class="action_icon"  src="assets/images/edit-pencil.svg"></span>
                    <span class="actions-links" (click) = "deleteInfividualQuestion(synonym,$event)" ngbTooltip='Delete' [container]='"body"'><img class="action_icon" src="assets/icons/delete-table.svg"></span>                  
                 </span>
@@ -140,47 +155,7 @@
              </ng-container>
             </div>
         </section>                               
-    </div>   
-    <ul class="list-group synonyms_added_group" *ngIf="!loadingContent && haveRecord && false">      
-        <li class="list_group" *ngFor="let synonym of synonymData;let i = index">         
-          <div class="panel-group">
-                <div class="panel panel-default">                    
-                      <div class="row m-0 row_data" data-toggle="collapse" (click) = "editSynRecord(synonym,$event,i)">               
-                          <div class="col-md-11 p-0">
-                              <span [innerHTML] = "synonym.keyword + ' '" class="main-sys"></span>
-                              <span class="sys-chips-added">                               
-                                <span *ngIf="synonym.synonyms.length"><span class="eyphan">-</span>
-                                <span *ngFor="let eachSyn of synonym.synonyms;let i = index" class="data-list"> <span *ngIf="i != synonym.synonyms.length-1;else last" > {{eachSyn + ' , '}}</span><ng-template #last>{{eachSyn + ''}}</ng-template>
-                              </span>
-                              </span>       
-                              </span>
-
-                          </div>
-                          <div class="col-md-1 p-0 text-right actions-btns">                  
-                              <span class="actions-links mr-3" (click) = "editSynRecord(synonym,$event,i)" ngbTooltip='edit' [container]='"body"'><img class="action_icon"  src="assets/images/edit-pencil.svg"></span>
-                              <span class="actions-links" (click) = "deleteInfividualQuestion(synonym,$event)" ngbTooltip='Delete' [container]='"body"'><img class="action_icon" src="assets/icons/delete-table.svg"></span>                  
-                          </div>
-                      </div>
-                      <div id="collapse_{{i}}" class="panel-collapse collapse body-inner">
-                          <div class="panel-body">
-                              <mat-form-field  class="example-chip-list" [floatLabel]="'never'">
-                                  <mat-chip-list #chipList [attr.aria-label]="'tag selection'">
-                                    <mat-chip *ngFor="let syn of synonym.synonyms"  [selectable]="selectable" [removable]="removable" (removed)="removeList(syn,synonym._id,i)"><span class="mat-val" *ngIf="syn">{{syn}}</span>
-                                      <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
-                                    </mat-chip>                                  
-                                    <input placeholder="Synonyms"
-                                          [matChipInputFor]="chipList"
-                                          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                          [matChipInputAddOnBlur]="addOnBlur"
-                                          (matChipInputTokenEnd)="addList($event,synonym._id,i)"  #suggestedInput>
-                                  </mat-chip-list>
-                                </mat-form-field>
-                          </div>
-                      </div>
-                </div>
-            </div>           
-        </li>
-      </ul>
+      </div>   
   </perfect-scrollbar> 
 </div>
 
