--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -25,6 +25,38 @@
             
         }         
     }
+    .empty-weights{
+        width: 320px;
+        margin: 0 auto;
+        text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;                       
+        -webkit-box-pack: center;                       
+        -ms-flex-pack: center;                       
+        justify-content: center;   
+        height: calc(100vh - 290px);
+        &.divBlockEmptylastChild{
+            display: none;
+            padding: 0;
+        }
+        img{
+            width: 75%;
+            margin: 0 auto;
+        }     
+        .heading{
+            margin: 18px 0 8px 0;
+            color: $primaryColor;
+        }
+        .desc{
+            color: $secondaryColor;
+            font-size: 14px;
+        }
+    }
     .scroll-table-allowRow{
         height: calc(100vh - 170px);
         padding-left: 10px;
